--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura base Discord</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,23 +19,33 @@
             <!-- header top -->
             <div class="header-top flex">
                 <div class="bar flex">
-                    <div class="logo flex">Logo</div>
+                    <div class="logo flex"><img src="img/logo.svg" alt=""></div>
                     <div class="links flex">
                         <ul class="flex">
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perchè Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
                         </ul>
                     </div>
-                    <div class="login-button flex">Login</div>
+                    <div class="login-button flex">
+                        <a href=""><span>Accedi</span></a>
+                    </div>
                 </div>
             </div>
             
             <!-- header bottom -->
             <div class="header-bottom flex">
-                <div class="box"></div>
+                <div class="box flex">
+                    <div>
+                        <h1>Il tuo posto per parlare</h1>
+                        <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
+                    
+                        <a href=""><span class="download">Scarica per Mac</span></a>
+                        <a href=""><span class="open-browser">Apri Discord nel tuo browser</span></a>
+                    </div>
+                </div>
             </div>
         </header>
         <!-- fine header -->
