--- a/index.html
+++ b/index.html
@@ -51,26 +51,49 @@
         <!-- fine header -->
 
 
+
+
+
         <!-- inizio main -->
         <main>
 
             <!-- sezioni -->
             <section class="section flex white">
                 <div class="box flex">
-                    <div class="blue"></div>
-                    <div class="pink"></div>
+                    <div class="big-column">
+                        <img src="img/item1.svg" alt="">
+                    </div>
+
+                    <div class="mid-column">
+                        <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                    </div>
                 </div>
             </section>
+
             <section class="section flex grey">
                 <div class="box flex">
-                    <div class="pink"></div>
-                    <div class="blue"></div>
+                    <div class="mid-column">
+                        <h1>Dove trovarsi è facile</h1>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                    </div>
+
+                    <div class="big-column">
+                        <img src="img/item2.svg" alt="">
+                    </div>
                 </div>
             </section>
-            <section class="section flex white">
+
+             <section class="section flex white">
                 <div class="box flex">
-                    <div class="blue"></div>
-                    <div class="pink"></div>
+                    <div class="big-column">
+                        <img src="img/item3.svg" alt="">
+                    </div>
+                    
+                    <div class="mid-column">
+                        <h1>Da pochi a un fandom</h1>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. <br> Concedi ai membri poteri speciali, crea canali privati, e molto altro</p>
+                    </div>
                 </div>
             </section>
             
