--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- sezioni -->
             <section class="section flex white">
                 <div class="box flex">
-                    <div class="big-column">
+                    <div class="img-column">
                         <img src="img/item1.svg" alt="">
                     </div>
 
@@ -78,7 +78,7 @@
                         <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
                     </div>
 
-                    <div class="big-column">
+                    <div class="img-column">
                         <img src="img/item2.svg" alt="">
                     </div>
                 </div>
@@ -86,7 +86,7 @@
 
              <section class="section flex white">
                 <div class="box flex">
-                    <div class="big-column">
+                    <div class="img-column">
                         <img src="img/item3.svg" alt="">
                     </div>
                     
@@ -99,7 +99,13 @@
             
             <!-- sezione grande -->
             <section class="section-big grey flex">
-                <div class="box"></div>
+                <div class="box">
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="" width="100%">
+                    <h2>Pronto a iniziare la tua avventura?</h2>
+                    <span>Scarica per Mac</span>
+                </div>
             </section>
         </main>
         <!-- fine main -->
