--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
 
@@ -42,7 +43,7 @@
                         <h1>Il tuo posto per parlare</h1>
                         <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
                     
-                        <a href=""><span class="download">Scarica per Mac</span></a>
+                        <a href=""><span class="download"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</span></a>
                         <a href=""><span class="open-browser">Apri Discord nel tuo browser</span></a>
                     </div>
                 </div>
@@ -104,7 +105,7 @@
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="" width="100%">
                     <h2>Pronto a iniziare la tua avventura?</h2>
-                    <span>Scarica per Mac</span>
+                    <a href="#"><span><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</span></a>
                 </div>
             </section>
         </main>
@@ -115,11 +116,64 @@
             <!-- footer top -->
             <div class="footer-top flex">
                 <div class="box flex">
-                    <div class="pink"></div>
-                    <div class="blue"></div>
-                    <div class="blue"></div>
-                    <div class="blue"></div>
-                    <div class="blue"></div>
+                    <div class="social-column">
+                        <h1>Il tuo posto per parlare</h1>
+                        
+                        <div class="language">
+                            <img src="img/ita.png" alt="" height="25px">
+                            <select name="Lingua" id="">
+                                   <option value="Ita">Italiano</option>
+                            </select>
+                        </div>
+
+                        <div class="socials">
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="mid-column">
+                        <h4>Prodotto</h4>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+                    </div>
+
+                    <div class="mid-column">
+                        <h4>Compagnia</h4>
+                        <a href="#">Chi siamo</a>
+                        <a href="#">Lavora con noi</a>
+                        <a href="#">Marchio</a>
+                        <a href="#">Redazione</a>
+                        <a href="#">Negozio</a>
+                    </div>
+
+                    <div class="mid-column">
+                        <h4>Risorse</h4>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+                    </div>
+
+                    <div class="mid-column">
+                        <h4>Prodotto</h4>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+                    </div>
                 </div>
             </div>
 
@@ -128,8 +182,12 @@
             <!-- footer bottom -->
             <div class="footer-bottom flex">
                 <div class="bar flex">
-                    <div class="logo">Logo</div>
-                    <div class="button">Bottone</div>
+                    <div class="logo">
+                        <img src="img/logo.svg" alt="">
+                    </div>
+                    <div class="register">
+                        <a href="#"><span>Registrati</span></a>
+                    </div>
                 </div>
             </div>
         </footer>
