Progetto con "hover"

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                     <div class="login-button flex">
-                        <a href=""><span>Accedi</span></a>
+                        <a href="#"><span>Accedi</span></a>
                     </div>
                 </div>
             </div>
