Progetto con "hover" e onde terminato

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -72,6 +72,8 @@
                 </div>
             </section>
 
+            <img src="img/wave.svg" alt="" class="wave">
+
             <section class="section flex grey">
                 <div class="box flex">
                     <div class="mid-column">
@@ -85,6 +87,8 @@
                 </div>
             </section>
 
+            <img src="img/wave.svg" alt="" class="wave-flip">
+
              <section class="section flex white">
                 <div class="box flex">
                     <div class="img-column">
@@ -97,6 +101,8 @@
                     </div>
                 </div>
             </section>
+
+            <img src="img/wave.svg" alt="" class="wave">
             
             <!-- sezione grande -->
             <section class="section-big grey flex">
